добавление двух секций

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class="header">
         <div class="container">
             <div class="header_wrapper">
-                <div class="header_logo">
+                <a href="#" class="header_logo">
                     <img src="assets/img/icons/logo.svg" alt="logo">
-                </div>
+                </a>
                 <nav class="header_nav">
                     <div class="header_a_nav">
                         <a href="#" class="header_a">Shop</a>
@@ -39,7 +39,28 @@
     <section class="main">
         <div class="container">
             <div class="main_wrapper">
-                
+                <p class="main_subtitle">OUTDOOR EXPLORATION</p>
+                <p class="main_title">Gear for when it <br> actually matters.</p>
+                <p class="main_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+        </div>
+    </section>
+    <!-- about -->
+    <section class="about">
+        <div class="container">
+            <div class="about_wrapper">
+                <div class="about_photo">
+                    <img src="assets/img/photos/people.png" alt="photo">
+                </div>
+                <div class="about_content">
+                    <p class="about_subtitle">Who are we?</p>
+                    <p class="about_title">A bit about us.</p>
+                    <p class="about_text">We are an outdoor gear company focused on Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et.</p>
+                    <a href="#" class="about_read">
+                        Read more
+                        <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
