--- a/index.html
+++ b/index.html
@@ -64,5 +64,51 @@
             </div>
         </div>
     </section>
+    <!-- promise -->
+    <section class="promise">
+        <div class="container">
+            <div class="promise_wrapper">
+                <div class="promise_texts">
+                    <p class="promise_subtitle">Our promise</p>
+                    <p class="promise_title">Setting the bar for our products.</p>
+                    <p class="promise_text">Morbi neque ex, condimentum dapibus congue et, vulputate ut <br> ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi <br> ultrices, ut faucibus orci tincidunt.</p>
+                </div>
+                <div class="promise_blocks">
+                    <div class="promise_block">
+                        <img src="assets/img/icons/sourcing.png" alt="icon" class="promise_icon">
+                        <p class="promise_title_block">Sustainable sourcing</p>
+                        <p class="promise_subtitle_block">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Suspendisse varius enim <br> in eros elementum tristique.</p>
+                    </div>
+                    <div class="promise_block">
+                        <img src="assets/img/icons/warranty.png" alt="icon" class="promise_icon">
+                        <p class="promise_title_block">Lifetime warranty</p>
+                        <p class="promise_subtitle_block">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Suspendisse varius enim <br> in eros elementum tristique.</p>
+                    </div>
+                    <div class="promise_block">
+                        <img src="assets/img/icons/tested.png" alt="icon" class="promise_icon">
+                        <p class="promise_title_block">All-terrain tested</p>
+                        <p class="promise_subtitle_block">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Suspendisse varius enim <br> in eros elementum tristique.</p>
+                    </div>
+                </div>
+                <div class="promise_blocks">
+                    <div class="promise_block">
+                        <img src="assets/img/icons/materials.png" alt="icon" class="promise_icon">
+                        <p class="promise_title_block">Premium materials</p>
+                        <p class="promise_subtitle_block">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Suspendisse varius enim <br> in eros elementum tristique.</p>
+                    </div>
+                    <div class="promise_block">
+                        <img src="assets/img/icons/designed.png" alt="icon" class="promise_icon">
+                        <p class="promise_title_block">Designed by you</p>
+                        <p class="promise_subtitle_block">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Suspendisse varius enim <br> in eros elementum tristique.</p>
+                    </div>
+                    <div class="promise_block">
+                        <img src="assets/img/icons/quality.png" alt="icon" class="promise_icon">
+                        <p class="promise_title_block">Quality assured</p>
+                        <p class="promise_subtitle_block">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Suspendisse varius enim <br> in eros elementum tristique.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
