добавление секции с фото

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <nav class="header_nav">
                     <div class="header_a_nav">
                         <a href="#" class="header_a">Shop</a>
-                        <a href="#" class="header_a">About us</a>
-                        <a href="#" class="header_a">Our team</a>
+                        <a href="#about" class="header_a">About us</a>
+                        <a href="#team" class="header_a">Our team</a>
                         <a href="#" class="header_a">Buyer's guides</a>
-                        <a href="#" class="header_a">Categories</a>
+                        <a href="#family" class="header_a">Categories</a>
                     </div>
                     <div class="header_btns">
                         <button class="header_btn">Buy template</button>
@@ -46,7 +46,7 @@
         </div>
     </section>
     <!-- about -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="about_wrapper">
                 <div class="about_photo">
@@ -106,6 +106,102 @@
                         <p class="promise_title_block">Quality assured</p>
                         <p class="promise_subtitle_block">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Suspendisse varius enim <br> in eros elementum tristique.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- family -->
+    <section class="family" id="family">
+        <div class="container">
+            <div class="family_wrapper">
+                <div class="family_texts">
+                    <p class="family_subtitle">Meet the family</p>
+                    <p class="family_title">What we have in store for you.</p>
+                    <p class="family_text">Morbi neque ex, condimentum dapibus congue et, vulputate ut <br> ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi <br> ultrices, ut faucibus orci tincidunt.</p>
+                </div>
+                <div class="family_cards">
+                    <div class="family_card">
+                        <p class="family_card_title">Accessories</p>
+                        <p class="family_card_subtitle">Accessories you didn't know <br> you needed.</p>
+                        <a href="#" class="family_read">
+                            View Accessories
+                            <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                        </a>
+                    </div>
+                    <div class="family_card2">
+                        <p class="family_card_title">Apparel</p>
+                        <p class="family_card_subtitle">Check out our line of non- <br> hiking clothes.</p>
+                        <a href="#" class="family_read">
+                            View Apparel
+                            <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                        </a>
+                    </div>
+                    <div class="family_card3">
+                        <p class="family_card_title">Climbing Gear</p>
+                        <p class="family_card_subtitle">Climbing gear for every occasion.</p>
+                        <a href="#" class="family_read">
+                            View Climbing Gear
+                            <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                        </a>
+                    </div>
+                </div>
+                <div class="family_cards">
+                    <div class="family_card4">
+                        <p class="family_card_title">Headwear</p>
+                        <p class="family_card_subtitle">Our beanies are so comfy you <br> won't believe it.</p>
+                        <a href="#" class="family_read">
+                            View Headwear
+                            <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                        </a>
+                    </div>
+                    <div class="family_card5">
+                        <p class="family_card_title">Hiking Gear</p>
+                        <p class="family_card_subtitle">Desert or mountain? Doesn't matter.</p>
+                        <a href="#" class="family_read">
+                            View Hiking Gear
+                            <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                        </a>
+                    </div>
+                    <div class="family_card6">
+                        <p class="family_card_title">Jackets</p>
+                        <p class="family_card_subtitle">Our jackets are perfect for every <br> season.</p>
+                        <a href="#" class="family_read">
+                            View Jackets
+                            <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                        </a>
+                    </div>
+                </div>
+                <a href="#" class="family_read">
+                    Show all categories
+                    <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- team -->
+    <section class="team" id="team">
+        <div class="container">
+            <div class="team_wrapper">
+                <div class="team_content">
+                    <a href="#" class="team_a">
+                        <img src="assets/img/icons/cart_icon2.png" alt="icon" class="team_icon">
+                        First Aid Kit
+                    </a>
+                    <a href="#" class="team_a">
+                        Banger Bottle
+                    </a>
+                    <a href="#" class="team_a">
+                        <img src="assets/img/icons/camera_icon.png" alt="icon" class="team_icon">
+                        Brian Schultz
+                    </a>
+                    <a href="#" class="team_a">
+                        <img src="assets/img/icons/person_icon.png" alt="icon" class="team_icon">
+                        Leah Stoff
+                    </a>
+                    <a href="#" class="team_a">
+                        <img src="assets/img/icons/location_icon.png" alt="icon" class="team_icon">
+                        Catalina, California
+                    </a>
                 </div>
             </div>
         </div>
