добавление секции shop

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 </a>
                 <nav class="header_nav">
                     <div class="header_a_nav">
-                        <a href="#" class="header_a">Shop</a>
+                        <a href="#shop" class="header_a">Shop</a>
                         <a href="#about" class="header_a">About us</a>
                         <a href="#team" class="header_a">Our team</a>
-                        <a href="#" class="header_a">Buyer's guides</a>
+                        <a href="#guids" class="header_a">Buyer's guides</a>
                         <a href="#family" class="header_a">Categories</a>
                     </div>
                     <div class="header_btns">
@@ -203,6 +203,27 @@
                         Catalina, California
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
+    <!-- shop -->
+    <section class="shop" id="shop">
+        <div class="container">
+            <div class="shop_wrapper">
+                <p class="shop_text">Shop</p>
+                <p class="shop_title">Check out our products.</p>
+                <p class="shop_subtitle">Morbi neque ex, condimentum dapibus congue et, vulputate ut <br> ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi <br> ultrices, ut faucibus orci tincidunt.</p>
+                <button class="shop_btn">
+                    Visit shop
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- guids -->
+    <section class="guids" id="guids">
+        <div class="container">
+            <div class="guids_wrapper">
+
             </div>
         </div>
     </section>
