Добавление секции guids

--- a/index.html
+++ b/index.html
@@ -223,7 +223,49 @@
     <section class="guids" id="guids">
         <div class="container">
             <div class="guids_wrapper">
-
+                <p class="guids_text">Buyer's guides</p>
+                <p class="guids_title">Navigating our offering.</p>
+                <p class="guids_subtitle">Morbi neque ex, condimentum dapibus congue et, vulputate ut <br> ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi <br> ultrices, ut faucibus orci tincidunt.</p>
+                <div class="guids_cards">
+                    <div class="guids_card">
+                        <img src="assets/img/photos/man.png" alt="man" class="guids_photo">
+                        <p class="guids_card_text">3 climbing accessories for the climber that <br> has everything</p>
+                        <div class="guids_card_persons">
+                            <div class="guids_card_person">
+                                <img src="assets/img/photos/alex.png" alt="photo" class="guids_card_person_photo">
+                                <div class="guids_card_person_who">
+                                    <a href="#" class="guids_name">Alex Jenna</a>
+                                    <p class="guids_prof">QA</p>
+                                </div>
+                            </div>
+                            <div class="guids_data">
+                                <p>October 18, 2021</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="guids_card">
+                        <img src="assets/img/photos/man2.png" alt="man" class="guids_photo">
+                        <p class="guids_card_text">Biking accessories for the beaten path</p>
+                        <div class="guids_card_persons">
+                            <div class="guids_card_person">
+                                <img src="assets/img/photos/woodie.png" alt="photo" class="guids_card_person_photo">
+                                <div class="guids_card_person_who">
+                                    <a href="#" class="guids_name">Woodie Brandon</a>
+                                    <p class="guids_prof">Product Designer</p>
+                                </div>
+                            </div>
+                            <div class="guids_data">
+                                <p>October 18, 2021</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="guids_a">
+                    <a href="#" class="guids_read">
+                        Show all buyer's guides
+                        <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
