Добавление секции read

--- a/index.html
+++ b/index.html
@@ -269,5 +269,24 @@
             </div>
         </div>
     </section>
+    <!-- read -->
+    <section class="read">
+        <div class="container">
+            <div class="read_wrapper">
+                <div class="read_photo">
+                    <img src="assets/img/photos/book.png" alt="photo">
+                </div>
+                <div class="read_content">
+                    <p class="read_text">Some light reading</p>
+                    <p class="read_title">Subscribe to our <br> magazine today.</p>
+                    <p class="read_subtitle">We are an outdoor gear company focused on <br> Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nullam scelerisque aliquam odio <br> et faucibus. Nulla rhoncus feugiat eros quis <br> consectetur. Morbi neque ex, condimentum <br> dapibus congue et.</p>
+                    <a href="#" class="read_read">
+                        Read more
+                        <img src="assets/img/icons/arrow.png" alt="arrow" class="about_arrow">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
