--- a/index.html
+++ b/index.html
@@ -288,5 +288,59 @@
             </div>
         </div>
     </section>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_wrapper">
+                <img src="assets/img/icons/footer_logo.svg" alt="logo" class="footer_logo">
+                <div class="footer_content">
+                    <div class="footer_block">
+                        <p class="footer_title">Pages</p>
+                        <a href="#" class="footer_a">Home</a>
+                        <a href="#" class="footer_a">Shop</a>
+                        <a href="#" class="footer_a">Categories</a>
+                        <a href="#" class="footer_a">Buyer's guides</a>
+                        <a href="#" class="footer_a">404</a>
+                        <a href="#" class="footer_a">Password</a>
+                    </div>
+                    <div class="footer_block">
+                        <p class="footer_title">Gear categories</p>
+                        <a href="#" class="footer_a">Hiking Gear</a>
+                        <a href="#" class="footer_a">Climbing Gear</a>
+                        <a href="#" class="footer_a">Jackets</a>
+                        <a href="#" class="footer_a">Accessories</a>
+                        <a href="#" class="footer_a">Apparel</a>
+                        <a href="#" class="footer_a">Headwear</a>
+                    </div>
+                    <div class="footer_block">
+                        <p class="footer_title">Company</p>
+                        <a href="#" class="footer_a">About us</a>
+                        <a href="#" class="footer_a">Our team</a>
+                        <a href="#" class="footer_a">Contact</a>
+                        <a href="#" class="footer_a">Terms & Conditions</a>
+                        <a href="#" class="footer_a">Style guide</a>
+                        <a href="#" class="footer_a">Licenses</a>
+                    </div>
+                    <div class="footer_block">
+                        <p class="footer_title">Newsletter</p>
+                        <p class="footer_subtitle">Subscribe to our (infrequent) newsletter where we share news <br> about upcoming listings and projects.</p>
+                        <div class="footer_inputs">
+                            <input type="text" class="footer_input" placeholder="Email">
+                            <button class="footer_btn">Submit</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_end">
+                    <p class="footer_license">© Outdoor Exploration, LLC. All rights reserved. Powered by Webflow</p>
+                    <div class="footer_icons">
+                        <a href="#"><img src="assets/img/icons/linkedin.png" alt="icon" class="footer_icon"></a>
+                        <a href="#"><img src="assets/img/icons/facebook.png" alt="icon" class="footer_icon"></a>
+                        <a href="#"><img src="assets/img/icons/insta.png" alt="icon" class="footer_icon"></a>
+                        <a href="#"><img src="assets/img/icons/twitter.png" alt="icon" class="footer_icon"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
