--- a/index.html
+++ b/index.html
@@ -182,26 +182,36 @@
     <section class="team" id="team">
         <div class="container">
             <div class="team_wrapper">
-                <div class="team_content">
-                    <a href="#" class="team_a">
-                        <img src="assets/img/icons/cart_icon2.png" alt="icon" class="team_icon">
-                        First Aid Kit
-                    </a>
-                    <a href="#" class="team_a">
-                        Banger Bottle
-                    </a>
-                    <a href="#" class="team_a">
-                        <img src="assets/img/icons/camera_icon.png" alt="icon" class="team_icon">
-                        Brian Schultz
-                    </a>
-                    <a href="#" class="team_a">
-                        <img src="assets/img/icons/person_icon.png" alt="icon" class="team_icon">
-                        Leah Stoff
-                    </a>
-                    <a href="#" class="team_a">
-                        <img src="assets/img/icons/location_icon.png" alt="icon" class="team_icon">
-                        Catalina, California
-                    </a>
+                <div class="team_all">
+                    <div class="team_texts">
+                        <p class="team_text">Bird's-eye view of the surf</p>
+                        <p class="team_title">Drone view of our product design, <br> Leah Stoff, getting ready to catch <br> a wave last weekend.</p>
+                        <a href="#" class="team_read">
+                            Read more
+                            <img src="assets/img/icons/arrow2.png" alt="arrow" class="about_arrow">
+                        </a>
+                    </div>
+                    <div class="team_content">
+                        <a href="#" class="team_a">
+                            <img src="assets/img/icons/cart_icon2.png" alt="icon" class="team_icon">
+                            First Aid Kit
+                        </a>
+                        <a href="#" class="team_a">
+                            Banger Bottle
+                        </a>
+                        <a href="#" class="team_a">
+                            <img src="assets/img/icons/camera_icon.png" alt="icon" class="team_icon">
+                            Brian Schultz
+                        </a>
+                        <a href="#" class="team_a">
+                            <img src="assets/img/icons/person_icon.png" alt="icon" class="team_icon">
+                            Leah Stoff
+                        </a>
+                        <a href="#" class="team_a">
+                            <img src="assets/img/icons/location_icon.png" alt="icon" class="team_icon">
+                            Catalina, California
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
